<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="CONVAYOR" Id="{230d7160-cfd8-4561-bda5-963e513f3cc2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CONVAYOR
VAR
	bMOVE:BOOL :=FALSE;
	bSTARTUP: BOOL:=FALSE;
	rtrigNext: R_TRIG;
	counter: INT;
	tNext: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR counter:=1 TO 6 BY 1 DO
	fbCART[counter]();
END_FOR;

tNext(IN:=bMOVE , PT:=T#1S , Q=> , ET=> );

CASE eCONVAYOR_STATE OF
	E_CONVAYOR_STATE.uninit:
		A_SETUP();
		eCONVAYOR_STATE:=E_CONVAYOR_STATE.idle;
	
	E_CONVAYOR_STATE.idle:
		bMOVE:=FALSE;
		bCONV_INPOS:=TRUE;
	
	E_CONVAYOR_STATE.do_move:
		IF bCONV_INPOS THEN		 
			A_CARTS_STEP();
		END_IF
		bMOVE:=TRUE;
		bCONV_INPOS:=FALSE;
		IF tNext.Q THEN
			A_CARTS_STEP();
			eCONVAYOR_STATE:=E_CONVAYOR_STATE.done;
		END_IF
	
	E_CONVAYOR_STATE.done:
		bMOVE:=FALSE;
		bCONV_INPOS:=TRUE;
	
	E_CONVAYOR_STATE.pause:
	//paused
	
END_CASE
	






	



]]></ST>
    </Implementation>
    <Action Name="A_CARTS_STEP" Id="{7a1e55b7-d701-499d-a448-d86c230d8eaf}">
      <Implementation>
        <ST><![CDATA[FOR counter:=1 TO 6 BY 1 DO
	fbCART[counter].A_STEP();
END_FOR;]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_SETUP" Id="{743a8297-84d8-4da3-9839-4637b3eb1bf1}">
      <Implementation>
        <ST><![CDATA[	bSTARTUP:=TRUE;
	fbCART[1].stCART.position:=1;
	fbCART[1].stCART.color:=1;
	fbCART[1].stCART.nNAME:='CART1';
	fbCART[1].stCART.posX:=posArrX[1];
	fbCART[1].stCART.posY:=posArrY[1];
	
	fbCART[2].stCART.position:=3;
	fbCART[2].stCART.color:=2;
	fbCART[2].stCART.nNAME:='CART2';
	fbCART[2].stCART.posX:=posArrX[3];
	fbCART[2].stCART.posY:=posArrY[3];
	
	fbCART[3].stCART.position:=5;
	fbCART[3].stCART.color:=3;
	fbCART[3].stCART.nNAME:='CART3';
	fbCART[3].stCART.posX:=posArrX[5];
	fbCART[3].stCART.posY:=posArrY[5];
	
	fbCART[4].stCART.position:=7;
	fbCART[4].stCART.color:=4;
	fbCART[4].stCART.nNAME:='CART4';
	fbCART[4].stCART.posX:=posArrX[7];
	fbCART[4].stCART.posY:=posArrY[7];
	
	fbCART[5].stCART.position:=9;
	fbCART[5].stCART.color:=5;
	fbCART[5].stCART.nNAME:='CART5';
	fbCART[5].stCART.posX:=posArrX[9];
	fbCART[5].stCART.posY:=posArrY[9];
	
	fbCART[6].stCART.position:=11;
	fbCART[6].stCART.color:=6;
	fbCART[6].stCART.nNAME:='CART6';
	fbCART[6].stCART.posX:=posArrX[11];
	fbCART[6].stCART.posY:=posArrY[11];]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>